@@ -201,7 +201,7 @@
                 <configuration>
                     <forkCount>1</forkCount>
                     <reuseForks>false</reuseForks>
-                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED -javaagent:"${user.home}/.m2/repository/org/aspectj/aspectjweaver/1.9.21/aspectjweaver-1.9.21.jar"</argLine>
+                    <!-- <argLine> -add-opens java.base/java.lang=ALL-UNNAMED -javaagent:"${user.home}/.m2/repository/org/aspectj/aspectjweaver/1.9.21/aspectjweaver-1.9.21.jar"</argLine>-->
                     <systemPropertyVariables>
                         <selenide.headless>false</selenide.headless>
                         <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
